darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__approval_modal_exec_multiline_prefix_no_execpolicy.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: contents
---

╭───────────────────────────────────────╮
│ >_ Darwin Code (v0.0.0)         │
│                                       │
│ model:     loading   /model to change │
│ directory: /tmp/project               │
╰───────────────────────────────────────╯


  Would you like to run the following command?

  $ python - <<'PY'
  print('hello')
  PY

› 1. Yes, proceed (y)
  2. No, and tell DarwinCode what to do differently (esc)

  Press enter to confirm or esc to cancel
