darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__approval_modal_exec_no_reason.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: terminal.backend().vt100().screen().contents()
---

╭───────────────────────────────────────╮
│ >_ Darwin Code (v0.0.1)         │
│                                       │
│ model:     loading   /model to change │
│ directory: /tmp/project               │
╰───────────────────────────────────────╯


  Would you like to run the following command?

  $ echo hello world

› 1. Yes, proceed (y)
  2. Yes, and don't ask again for commands that start with `echo hello world` (p)
  3. No, and tell DarwinCode what to do differently (esc)

  Press enter to confirm or esc to cancel
