darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---



╭───────────────────────────────────────╮
│ >_ Darwin Code (v0.0.0)         │
│                                       │
│ model:     loading   /model to change │
│ directory: /tmp/project               │
╰───────────────────────────────────────╯

• Working (0s • esc to interrupt)

• Messages to be submitted at end of turn
  ↳ Steer submitted while /compact was running.

› Explain this codebase

  gpt-5.3-darwin-code default · /tmp/project
