darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__exec_approval_modal_exec.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "                                                                                ",
        "╭───────────────────────────────────────╮                                       ",
        "│ >_ Darwin Code (v0.0.0)         │                                       ",
        "│                                       │                                       ",
        "│ model:     loading   /model to change │                                       ",
        "│ directory: /tmp/project               │                                       ",
        "╰───────────────────────────────────────╯                                       ",
        "                                                                                ",
        "                                                                                ",
        "  Would you like to run the following command?                                  ",
        "                                                                                ",
        "  Reason: this is a test reason such as one that would be produced by the       ",
        "  model                                                                         ",
        "                                                                                ",
        "  $ echo hello world                                                            ",
        "                                                                                ",
        "› 1. Yes, proceed (y)                                                           ",
        "  2. No, and tell DarwinCode what to do differently (esc)                       ",
        "                                                                                ",
        "  Press enter to confirm or esc to cancel                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 20, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 46, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 73, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 7, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 14, fg: Rgb(137, 180, 250), bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 14, fg: Rgb(205, 214, 244), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 56, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
